tests/compile_errors/006-deep-yield.buzz
// Type mismatch: got type `str`, expected `void`
import "std";

fun one() > void *> str? {
    _ = yield "hello";
}

fun two() > void {
    one();
}

test "Deep yield" {
    const fiber = &two();
    std\print(resume fiber ?? "nope");
}
